Merged in CTC-2138-implement-robot-loaders-in-xill (pull request #253)
CTC-2138 implement robot loaders in xill IDE

* Enable xill-ide module

* Project Pane changes

    Things to FXController are send as URL instead of File.

* Update Robot/FileTab

* Clean up FXController

* Resolve compile errors in Xill IDE

* fix Instuction stack position text, Add breakpoints and errors

    Instead of the whole URL it now only shows the robot name + extension in the debugpane stack pointer.
    Errors are now visible again because the resource is loaded before validating.
    The breakpoints now  stay visible when returning from a included robot during debugging.

* Properly unescaping files.

* fix runBulk and callBot not working

    The check tried getRobot on the input, the input needs to have the .xill extension and getRobot adds that extension again.
    This faulty check is fixed by calling getResource again. Which does exactly the same but withouth the conversion.

* Fix escaping issues for stacktrace

* Add stracktrace to exceptions and use advised UTF-8 encoding for decoding URLs

* Fix compile errors from merge

* Clean up for breakpoints fix

* Fix breakpoints equality check

* Fix error with + character when saving files

* Fix file tab name replacing + with spaces

* Fix "save as" not working, throw exception when saving uses unsupported protocol

* Add robot extension when "save as" result has no extension

Approved-by: dwight peters <dwight.peters@xillio.nl>